Changes log for Test-YAML-Meta
==============================

        - consistent abstract.
        - INSTALL documentation update.
        - extended META test suite.
        - fixed license fields in META.json to be lists.

0.20    2013-04-07
        - change file dates changed to meet W3CDTF standards.
        - reworked Makefile.PL for clarity.
        - upgraded to Test::CPAN::Meta::JSON for tests.
        - added meta.JSON.
        - updated test suite.
        - added repositories to Meta files.

0.19    2011-02-15
        - added missing prerequisite.

0.18    2011-02-14
        - removed tests which are no longer applicable.

0.17    2011-02-13
        - Distribution name change: Test-YAML-Meta => Test-CPAN-Meta-YAML.
        - This distribution now a wrapper around Test-CPAN-Meta-YAML.

0.16    2010-04-12
        - fixed qr// delimiters due to issues with the NOT SIGN symbol 
          (suggested by Ricardo Signes & David Golden).

0.15    2009-12-18
        - renamed word() to keyword().
        - added identifier() validation.
        - changed optional_features key from a keyword to an identifier type,
          thus further clarifying RT#52685 (thanks Kevin).

0.14    2009-12-12
        - clarified spec defined and user defined keys, as promoted by Kevin
          Ryde in RT#52685 (thanks Kevin).

0.13    2009-12-07
        - RT#46473: license url with fragment part (Kevin Ryde)
        - RT#47393: "optional_features" as map rather than list (Kevin Ryde)
        - above applied to 1.4, 1.3 and 1.2 version of the meta-spec.

0.12    2009-05-24
        - added version checking to standard 94metatest.t
        - added changes file checking, 95changedate.t
        - added support for v-strings (RT#43566, thanks to David Golden)
        - relaxed resource keys names, as per spec (RT#41605, thanks to 
          Jonathan Yu)

0.11    2008-06-27
        - added spec version 1.4
        - added further check to ensure we have a known spec version
